--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ERICKNICCO.GITHUB.io/cirepixel"
+  "homepage": "http://ERICKNICCO.GITHUB.io/cirepixel",
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
